--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -409,6 +409,10 @@ input, button, select, optgroup, textarea {
   word-break: break-all;
 }
 
+.space-line {
+  white-space: pre-line;
+}
+
 .horizontal-bar {
   height: 0.0625rem;
   margin: 0.9375rem 0;
@@ -1483,7 +1487,7 @@ button {
   white-space: nowrap;
   vertical-align: middle;
   overflow: visible;
-  padding: 0.625rem 1.563rem 0.625rem 1.563rem;
+  padding: 0.625rem 1.563rem 0.5625rem 1.563rem;
   cursor: pointer;
 }
 
@@ -3276,7 +3280,7 @@ button .icon-search {
 
 .file-uploader-view .file-uploader-title {
   font-size: 1rem;
-  font-weight: 500;
+  font-weight: 400;
   color: #586872;
   margin: auto 0;
 }
@@ -3315,7 +3319,7 @@ button .icon-search {
 .file-uploader-view .dropzone.dz-uploaded .dz-preview .dz-details {
   display: inline-flex;
   font-size: 1rem;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 .file-uploader-view .dropzone.dz-uploaded .dz-preview .dz-details .dz-file-type {
