--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -409,6 +409,10 @@ input, button, select, optgroup, textarea {
   word-break: break-all;
 }
 
+.space-line {
+  white-space: pre-line;
+}
+
 .horizontal-bar {
   height: 0.0625rem;
   margin: 0.9375rem 0;
@@ -1925,7 +1929,7 @@ button {
   white-space: nowrap;
   vertical-align: middle;
   overflow: visible;
-  padding: 0.625rem 1.563rem 0.625rem 1.563rem;
+  padding: 0.625rem 1.563rem 0.5625rem 1.563rem;
   cursor: pointer;
 }
 
@@ -3475,7 +3479,7 @@ button.ghost-line:disabled .icon {
 
 .file-uploader-view .file-uploader-title {
   font-size: 1rem;
-  font-weight: 500;
+  font-weight: 400;
   color: #586872;
   margin: auto 0;
 }
@@ -3514,7 +3518,7 @@ button.ghost-line:disabled .icon {
 .file-uploader-view .dropzone.dz-uploaded .dz-preview .dz-details {
   display: inline-flex;
   font-size: 1rem;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 .file-uploader-view .dropzone.dz-uploaded .dz-preview .dz-details .dz-file-type {
@@ -3546,11 +3550,6 @@ button.ghost-line:disabled .icon {
  * @author wdj
  * @version 1.0
  */
-.avatar-edit {
-  display: flex;
-  flex-direction: column;
-}
-
 .avatar-edit .avatar-title {
   font-size: 1rem;
   font-weight: 500;
