--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -2134,16 +2134,16 @@ button .icon-plus {
   box-shadow: 0 0 0.9375rem rgba(204, 206, 209, 0.15), inset 0 0 0 0.0625rem #EBEBEB;
 }
 
-.itsm-container .main .card-list .card .no-data-found {
+.itsm-container .main .card-list .no-data-found {
   background-color: rgba(247, 248, 249, 0.45);
   pointer-events: none;
 }
 
-.itsm-container .main .card-list .card .no-data-found .no-data-icon {
+.itsm-container .main .card-list .no-data-found .no-data-icon {
   content: url("../media/icons/icon_no_data.svg");
 }
 
-.itsm-container .main .card-list .card .no-data-found .no-data-text {
+.itsm-container .main .card-list .no-data-found .no-data-text {
   font-size: 1.125rem;
   font-weight: 500;
   color: #CCCED1;
