#9615 [단위 테스트 - 코드] 검색창 maxlength 속성 적용
- 3개 화면에 대해 maxlength 적용

--- a/src/main/resources/public/template/token/tokenEdit.html
+++ b/src/main/resources/public/template/token/tokenEdit.html
@@ -80,7 +80,7 @@
         // 관련 문서 모달 내부 Template
         function createModalContent(data) {
             return `<div class="related-instance-list">` +
-                       `<input class="search col-5" type="text" name="search" id="search" placeholder="${i18n.msg('token.label.searchPlaceholder')}"/>` +
+                       `<input class="search col-5" type="text" name="search" id="search" maxlength="100" placeholder="${i18n.msg('token.label.searchPlaceholder')}"/>` +
                        `<div class="table-set" id="instanceList"></div>` +
                     `</div>`;
         }
