#9576 [단위 테스트 - 역할] 특수문자 검색 오류

--- a/src/main/resources/public/template/role/roleEdit.html
+++ b/src/main/resources/public/template/role/roleEdit.html
@@ -289,7 +289,7 @@
         function onDelete() {
             const opt = {
                     method: 'delete',
-                    url: '/rest/roles/' + document.getElementById('txtRoleId').value,
+                    url: '/rest/roles/' + encodeURIComponent(document.getElementById('txtRoleId').value),
                     callbackFunc: function(response) {
                         switch (response.responseText) {
                             case "true":
