#9573 [ITSM] view 공통 mixin 생성

--- a/src/main/resources/public/src/scss/template/_elements.scss
+++ b/src/main/resources/public/src/scss/template/_elements.scss
@@ -619,6 +619,12 @@ label {
         }
       }
     }
+    // TODO: 디자인 필요
+    //&:disabled {
+    //  + span {
+    //    background-color: $element-disabled-bg-color;
+    //  }
+    //}
 
     &:hover {
       + span {
