--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -2011,6 +2011,12 @@ button .icon-plus {
   overflow: auto;
 }
 
+.itsm-container .horizontal-bar {
+  height: 0.0625rem;
+  margin: 0.625rem 0;
+  background-color: #EBEBEB;
+}
+
 .itsm-container .main {
   width: calc(100vw - 13.75rem);
   height: 100vh;
@@ -2513,223 +2519,13 @@ button .icon-plus {
   padding: 0;
 }
 
-.notice-content-view {
+.notice-content-view,
+.faq-content-view,
+.download-content-view,
+.board-content-view {
   padding: 2.188rem 23.13rem 3.125rem 23.13rem;
   background-color: #ffffff;
   border-top: 0.0625rem solid #EBEBEB;
-}
-
-.itsm-container {
-  /* _contents-edit.scss
- *
- * 파일 경로 : contents/_contents-edit.scss
- * @description 입력화면 (ex. 공지사항 등록)
- * @author jy.lim
- * @version 1.0
- */
-  /* 상세 조회 화면 */
-}
-
-.itsm-container .contents-edit {
-  height: 100vh;
-  background: #F7F8F9;
-  background-color: white;
-}
-
-.itsm-container .contents-edit .header {
-  padding: 3.1875rem 3.75rem 3.1875rem 3.75rem;
-  background: #F7F8F9;
-  border-bottom: 0.0625rem solid #EBEBEB;
-}
-
-.itsm-container .contents-edit .edit {
-  padding-top: 3.125rem;
-  width: 61.25rem;
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-}
-
-.itsm-container .contents-edit .edit .scroll-wrap {
-  height: 43.125rem;
-  display: flex;
-  flex-direction: column;
-}
-
-.itsm-container .contents-edit .edit .scroll-wrap .form-wrap {
-  flex: 1;
-  overflow: auto;
-  padding: 0 1.875rem 0 4.0625rem;
-}
-
-.itsm-container .contents-edit .edit .table-set {
-  margin-top: 0.6875rem;
-  height: 28.125rem;
-  overflow: auto;
-}
-
-.itsm-container .contents-edit .edit .table-set thead tr {
-  border-bottom: 0.125rem solid #E1E3E6;
-}
-
-.itsm-container .contents-edit .edit .table-set tr {
-  height: 2.5rem;
-}
-
-.itsm-container .contents-edit .edit .table-set th {
-  font-weight: 500;
-  padding: 1rem;
-  vertical-align: middle;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-.itsm-container .contents-edit .edit .table-set td {
-  padding: 0.75rem 0.75rem 0 0;
-}
-
-.itsm-container .contents-edit .edit .form-set {
-  display: flex;
-  flex-direction: column;
-  margin-top: 0.6875rem;
-}
-
-.itsm-container .contents-edit .edit .form-set label {
-  font-weight: 500;
-  margin-left: 1.25rem;
-}
-
-.itsm-container .contents-edit .edit .form-set label:first-child {
-  margin-left: 0;
-}
-
-.itsm-container .contents-edit .edit .form-set .designed-options li {
-  margin: 0;
-  padding: 0.75rem 0;
-  text-indent: 0.625rem;
-  height: 2.5rem;
-}
-
-.itsm-container .contents-edit .edit .form-set .designed-options li:hover {
-  background: rgba(0, 152, 255, 0.08);
-}
-
-.itsm-container .contents-edit .edit .form-set .designed-options li[rel="hide"] {
-  display: none;
-}
-
-.itsm-container .contents-edit .edit .form-set .checkbox-list {
-  height: 13.5rem;
-  border: 0.0625rem solid #EBEBEB;
-  border-radius: 0.0625rem;
-  overflow-y: auto;
-  padding: 0.5rem 0.625rem;
-}
-
-.itsm-container .contents-edit .edit .form-set .checkbox-list li {
-  color: #586872;
-  font-weight: 400;
-  height: 1.5rem;
-}
-
-.itsm-container .contents-edit .edit .form-set .radio-list {
-  height: 27rem;
-  border: 0.0625rem solid #EBEBEB;
-  border-radius: 0.0625rem;
-  overflow-y: auto;
-  padding: 0.5rem 0.625rem;
-}
-
-.itsm-container .contents-edit .edit .form-set .text-editor {
-  height: 12.5rem;
-}
-
-.itsm-container .contents-edit .edit .form-set .label-row {
-  display: flex;
-  align-items: center;
-}
-
-.itsm-container .contents-edit .edit .form-set .margin-bottom-10 {
-  margin-bottom: 0.625rem;
-}
-
-.itsm-container .contents-edit .edit .form-set .none-margin {
-  margin: 0;
-}
-
-.itsm-container .contents-edit .btn-list {
-  padding: 2.5rem 0 3.125rem 0;
-}
-
-.itsm-container .contents-edit .flex-row {
-  margin-bottom: 3.125rem;
-}
-
-.itsm-container .contents-edit .custom-code-edit .condition {
-  width: 28.3125rem;
-}
-
-.itsm-container .contents-edit .custom-code-edit .equal {
-  padding: 0 0.3125rem;
-}
-
-.itsm-container .contents-edit .custom-code-edit .minus {
-  padding: 0.5625rem 0.8125rem;
-}
-
-.itsm-container .contents-edit .custom-code-edit .icon-delete {
-  background: #CCCED1;
-}
-
-.itsm-container .contents-flex {
-  height: 100vh;
-  background: #F7F8F9;
-}
-
-.itsm-container .contents-flex .header {
-  padding: 3.1875rem 3.75rem 3.1875rem 3.75rem;
-  background: #F7F8F9;
-  border-bottom: 0.0625rem solid #EBEBEB;
-}
-
-.itsm-container .contents-flex .flex {
-  padding: 3.125rem 19.375rem 9.315rem 19.375rem;
-  background-color: #ffffff;
-  display: flex;
-  flex-grow: 1;
-  min-height: calc(100vh - 10.375rem);
-}
-
-.itsm-container .contents-flex .flex.flex-column {
-  flex-direction: column;
-}
-
-.itsm-container .contents-flex .flex.flex-row {
-  flex-direction: row;
-}
-
-.itsm-container .contents-flex .flex .flex-item {
-  display: flex;
-}
-
-.itsm-container .contents-flex .flex .flex-item.item-text {
-  min-height: 13.4375rem;
-  padding: 0.3125rem 1.25rem;
-  margin-bottom: 0.75rem;
-}
-
-.itsm-container .contents-flex .flex .flex-item.item-text span {
-  margin: 0;
-  white-space: normal;
-  word-break: normal;
-}
-
-.itsm-container-close {
-  height: 100%;
-  padding: 5.625rem 0 0 5rem;
-  background: #eaf1f7;
 }
 
 .itsm-popup {
@@ -2786,18 +2582,12 @@ button .icon-plus {
   margin: 0 0.6875rem 0 0.6875rem;
 }
 
-.horizontal-bar {
-  height: 0.0625rem;
-  margin: 0.625rem 0;
-  background-color: #EBEBEB;
-}
-
-.row-right {
+.itsm-popup .row-right {
   display: inherit;
   justify-content: flex-end;
 }
 
-.row-right span:last-child {
+.itsm-popup .row-right span:last-child {
   margin: auto 1.25rem auto 0;
 }
 
@@ -5878,6 +5668,11 @@ body.modal-active {
   background: #CCCED1;
 }
 
+/** 
+ * 댓글 디자인
+ * /default/_reply.scss
+ * 화면 : 게시판
+ */
 .reply-body {
   margin-top: 2.5rem;
 }
@@ -5942,4 +5737,11 @@ body.modal-active {
 .reply .profile-photo {
   flex: none;
   margin: auto 0.9376rem auto 0;
+  border-radius: 50%;
+  background-color: #F0F0F0;
+}
+
+.reply .icon-edit,
+.reply .icon-delete {
+  background: #CCCED1;
 }
