--- a/src/main/resources/public/template/custom-code/customCodeView.html
+++ b/src/main/resources/public/template/custom-code/customCodeView.html
@@ -7,23 +7,29 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="contents-edit flex-column scroll-wrap">
-        <div class="header">
-            <div class="page-title">
+    <div class="flex-column edit">
+        <div class="custom-code-header">
+            <div class="header-title flex-row align-items-baseline">
                 <h1 th:text="#{customCode.label.customCode}"></h1>
-                <h6 class="title-description" th:text="#{customCode.msg.viewDescription}"></h6>
+                <h6 class="description" th:text="#{customCode.msg.viewDescription}"></h6>
             </div>
         </div>
-        <div class="custom-code-edit edit">
-            <div class="form-set">
-                <label class="required" th:text="#{customCode.label.name}" for="customCodeName"></label>
-                <input type="text" id="customCodeName" required="required" maxlength="100"
+        <div class="custom-code-content-edit">
+            <div class="flex-column edit-row">
+                <label for="customCodeName">
+                    <span th:text="#{customCode.label.name}"></span>
+                    <span class="required"></span>
+                </label>
+                <input type="text" id="customCodeName" required="required" maxlength="110"
                        th:value="${customCode?.customCodeName}" disabled>
             </div>
-            <div class="form-set">
-                <label class="required" th:text="#{customCode.label.type}"></label>
+            <div class="flex-column edit-row">
+                <label>
+                    <span th:text="#{customCode.label.type}"></span>
+                    <span class="required"></span>
+                </label>
                 <div class="flex-row mr-auto">
-                    <label class="radio" for="table" tabindex="0">
+                    <label class="radio mr-4" for="table" tabindex="0">
                         <input id="table" name="type" type="radio"
                                th:checked="${customCode?.type == null || customCode?.type == 'table'}"
                                onclick="changeContainer('table')" disabled>
@@ -32,8 +38,7 @@
                     </label>
                     <label class="radio" for="code" tabindex="0">
                         <input id="code" name="type" type="radio"
-                               th:checked="${customCode?.type == 'code'}"
-                               onclick="changeContainer('code')" disabled>
+                               th:checked="${customCode?.type == 'code'}" disabled>
                         <span></span>
                         <span class="label" th:text="#{customCode.label.code}"></span>
                     </label>
@@ -42,35 +47,53 @@
             <!-- 타입: table-->
             <div id="type-table-container"
                  th:style="${customCode?.type == null || customCode?.type == 'table' ? '' : 'display: none'}">
-                <div class="form-set">
-                    <label class="required" th:text="#{customCode.label.targetTable}"></label>
-                    <input th:value="|${customCode.targetTableName}(${customCode.targetTable})|" disabled />
+                <div class="flex-column edit-row">
+                    <label>
+                        <span th:text="#{customCode.label.targetTable}"></span>
+                        <span class="required"></span>
+                    </label>
+                    <input type="text" th:value="|${customCode.targetTableName}(${customCode.targetTable})|" disabled/>
                 </div>
-                <div class="form-set">
-                    <label class="required" th:text="#{customCode.label.searchColumn}"></label>
-                    <input th:value="|${customCode.searchColumnName}(${customCode.searchColumn})|" disabled />
+                <div class="flex-column edit-row">
+                    <label>
+                        <span th:text="#{customCode.label.searchColumn}"></span>
+                        <span class="required"></span>
+                    </label>
+                    <input type="text" th:value="|${customCode.searchColumnName}(${customCode.searchColumn})|" disabled />
                 </div>
-                <div class="form-set">
-                    <label class="required" th:text="#{customCode.label.valueColumn}"></label>
-                    <input th:value="|${customCode.valueColumnName}(${customCode.valueColumn})|" disabled />
+                <div class="flex-column edit-row">
+                    <label>
+                        <span th:text="#{customCode.label.valueColumn}"></span>
+                        <span class="required"></span>
+                    </label>
+                    <input type="text" th:value="|${customCode.valueColumnName}(${customCode.valueColumn})|" disabled />
                 </div>
-                <div class="form-set">
-                    <div class="flex-row under-bar">
-                        <label th:text="#{customCode.label.condition}"></label>
+                <div class="flex-column edit-row">
+                    <div class="under-bar">
+                        <label id="conditionLabel">
+                            <span th:text="#{customCode.label.condition}"></span>
+                        </label>
+                        <button type="button" class="default-line plus float-right" disabled>
+                            <span class="icon-plus"></span>
+                        </button>
                     </div>
                     <div id="condition"></div>
                 </div>
             </div>
-
             <!-- 타입: 코드 -->
             <div id="type-code-container" th:style="${customCode?.type == 'code' ? '' : 'display: none'}">
-                <div class="form-set">
-                    <label class="required" th:text="#{customCode.label.pCode}"></label>
-                    <input type="text" id="pCode" maxlength="100" th:value="${customCode?.pCode}">
+                <div class="flex-column edit-row">
+                    <label>
+                        <span th:text="#{customCode.label.pCode}"></span>
+                        <span class="required"></span>
+                    </label>
+                    <input type="text" id="pCode" maxlength="100" th:value="${customCode?.pCode}" disabled>
                 </div>
             </div>
-            <div class="btn-list">
-                <a class="btn default-line" href="/custom-codes/search" th:text="#{common.btn.list}"></a>
+            <div class="flex-row justify-content-end edit-row">
+                <div class="btn-list">
+                    <a class="btn default-line" href="/custom-codes/search" th:text="#{common.btn.list}"></a>
+                </div>
             </div>
         </div>
     </div>
@@ -84,27 +107,36 @@
                 const condition = JSON.parse(/*[[${customCode.condition}]]*/'');
                 if (condition != null) {
                     Object.keys(condition).forEach(function (data) {
-                        const divFormSet = document.createElement('div');
-                        divFormSet.classList.add('form-set');
                         const divRow = document.createElement('div');
-                        divRow.classList.add('row');
-                        const keyLabel = document.createElement('label');
-                        keyLabel.innerText = getColumnName(data);
-                        keyLabel.classList.add('col-4');
-                        const equalSpan = document.createElement('span');
-                        equalSpan.textContent = '=';
-                        const valueLabel = document.createElement('label');
-                        valueLabel.innerText = condition[data];
-                        valueLabel.classList.add('col-7');
+                        divRow.classList.add('flex-row', 'edit-row');
 
-                        divRow.appendChild(keyLabel);
+                        const conditionInput = document.createElement('input');
+                        conditionInput.classList.add('col-6');
+                        conditionInput.type = 'text';
+                        conditionInput.maxLength = 100;
+                        conditionInput.value = getColumnName(data);
+                        conditionInput.disabled = true;
+
+                        const equalSpan = document.createElement('span');
+                        equalSpan.classList.add('equal', 'ml-1', 'mr-1');
+                        equalSpan.textContent = '=';
+
+                        const valueInput = document.createElement('input');
+                        valueInput.classList.add('col-6');
+                        valueInput.type = 'text';
+                        valueInput.maxLength = 100;
+                        valueInput.value = condition[data];
+                        valueInput.disabled = true;
+
+                        divRow.appendChild(conditionInput);
                         divRow.appendChild(equalSpan);
-                        divRow.appendChild(valueLabel);
-                        divFormSet.appendChild(divRow);
-                        document.getElementById('condition').appendChild(divFormSet);
+                        divRow.appendChild(valueInput);
+                        document.getElementById('condition').appendChild(divRow);
                     });
                 }
             }
+            // 스크롤바 추가
+            OverlayScrollbars(document.querySelector('.edit'), {className: 'scrollbar'});
         };
 
         //Get Column Name
