--- a/src/main/resources/public/template/download/downloadView.html
+++ b/src/main/resources/public/template/download/downloadView.html
@@ -8,27 +8,35 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="contents-flex flex-column scroll-wrap">
-        <div class="header">
-            <div class="page-title">
+    <div class="flex-column view">
+        <div class="download-header">
+            <div class="header-title flex-row align-items-baseline">
                 <h1 th:text="#{download.label.download}"></h1>
-                <h6 class="title-description" th:text="#{download.msg.viewDescription}"></h6>
+                <h6 class="description" th:text="#{download.msg.viewDescription}"></h6>
             </div>
         </div>
-        <div class="flex flex-column">
-            <h4 class="under-bar bold" th:text="#{${download.downloadTitle}}"></h4>
-            <div class="row-right">
-                <span id="spanCreateDt" th:text="${download?.createDt}"></span>
-                <span class="vertical-bar"></span>
-                <span class="user-name" th:text="${download?.createUserName}"></span>
+        <div class="download-content-view">
+            <div class="flex-column view-row">
+                <div class="view-title text-ellipsis" th:text="${download.downloadTitle}"></div>
+            </div>
+            <div class="flex-column view-row">
+                <div class="view-sub-title flex-row justify-content-end">
+                    <span class="user-name" th:text="${download?.createUserName}"></span>
+                    <span class="vertical-bar"></span>
+                    <span id="spanCreateDt" th:text="${download?.createDt}"></span>
+                </div>
             </div>
             <div class="horizontal-bar"></div>
-            <div class="flex-item item-text">
-                <h5 th:text="#{download.label.category}"></h5>
-                <span th:text="#{${download.downloadCategory}}"></span>
+            <div class="flex-column view-row">
+                <div class="view-content">
+                    <pre class="space-line">
+                        <h5 th:text="#{download.label.category}"></h5>
+                        <span class="view-text" th:text="${download.downloadCategory}"/>
+                    </pre>
+                </div>
             </div>
             <div class="horizontal-bar"></div>
-            <div class="file-uploader-view">
+            <div class="flex-row view-row file-uploader-view">
                 <label class="file-uploader-title" th:text="#{common.label.attachFile}"></label>
                 <div class="vertical-bar"></div>
                 <form id="frm" method="post">
@@ -39,10 +47,12 @@
                 </form>
             </div>
             <div class="horizontal-bar"></div>
-            <div class="btn-list">
-                <button th:text="#{common.btn.modify}" sec:authorize="hasAuthority('download.update')"
-                        class="point-fill" th:onclick="'location.href=\'' + @{/downloads/{id}/edit(id=${download.downloadId})} + '\''"></button>
-                <a class="btn default-line" href="/downloads/search" th:text="#{common.btn.list}"></a>
+            <div class="flex-row justify-content-end view-row">
+                <div class="btn-list">
+                    <button th:text="#{common.btn.modify}" sec:authorize="hasAuthority('download.update')"
+                            class="point-fill" th:onclick="'location.href=\'' + @{/downloads/{id}/edit(id=${download.downloadId})} + '\''"></button>
+                    <a class="btn default-line" href="/downloads/search" th:text="#{common.btn.list}"></a>
+                </div>
             </div>
         </div>
     </div>
@@ -54,6 +64,8 @@
         window.onload = function() {
             document.getElementById('spanCreateDt').textContent = i18n.userDateTime(document.getElementById('spanCreateDt').textContent);
             fileUploader.init({extra: {formId: 'frm', ownId: [[${download.downloadId}]], editor: false, isView: true}});
+
+            OverlayScrollbars(document.querySelectorAll('.view'), { className: 'scrollbar' });
         };
         /*]]>*/
     </script>
